# SmartClip-Manager

./: .gitignore  CONTRIBUTING.md  README.md  README_CN.md  README_TW.md  index.html  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
